[gd_scene load_steps=2 format=3 uid="uid://dh2vdkwhuec25"]

[ext_resource type="Script" uid="uid://c6vqsew6568jn" path="res://Scripts/GUI-code/dungeon_button.gd" id="1_4rblt"]

[node name="DungeonButton" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4rblt")

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "WORLD NAME"
alignment = 0

[node name="DeleteButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
